Fix build warnings (#149)
* Remove deprecated constructors

* Remove deprecated constructors

* Remove another deprecated constrctor